recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:3: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head:::Nil
                 ^nfirst:4: error: type mismatch;
 found   : Int
 required: List[Int]
  } else l.head:::nfirst(l.tail, n-1)
               ^